// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login /> render content === EMAIL_FORM 1`] = `
<UNDEFINED
  closeModal={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  show={true}
>
  <ReduxForm
    locale="en"
    loginWithScatter={[MockFunction]}
    showEmailPasswordForm={[MockFunction]}
  />
</UNDEFINED>
`;

exports[`<Login /> render content === EMAIL_PASSWORD_FORM 1`] = `
<UNDEFINED
  closeModal={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  show={true}
>
  <Connect(ReduxForm)
    email="email"
    locale="en"
    login={[MockFunction]}
    loginProcessing={false}
    loginWithScatter={[MockFunction]}
    showIForgotPasswordModal={[Function]}
  />
</UNDEFINED>
`;

exports[`<Login /> render content === WE_ARE_HAPPY_FORM 1`] = `
<UNDEFINED
  closeModal={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  show={true}
>
  <ReduxForm
    finishRegistration={[MockFunction]}
    finishRegistrationProcessing={false}
    locale="en"
  />
</UNDEFINED>
`;
